add user account verify
- no email integrated
- Used terminal for sending email
